test/Fail/OpBind.err
OpBind.agda:8.7-8: error: [NotInScope]
Not in scope:
  ! at OpBind.agda:8.7-8
    (did you mean
       'R._!' or
       '_!'?)
when scope checking !
